terraform/main.tf
terraform {
    required_providers {
      aws = {
        source = "hashicorp/aws"
        version = "~>4.0"
      }
    }

    #backend -> means where terraform state file will be stored
    backend "s3" {
      key = "aws/ec2-deploy/terraform.tfstate"
    }
}

provider "aws" {
  region = var.region
}

resource "aws_instance" "servernode" {
    ami = "ami-0f30a9c3a48f3fa79"
    instance_type = "t2.micro"
    #Attach aws_key_pair to this instance
    key_name = aws_key_pair.deployer.key_name
    #Attach security group
    vpc_security_group_ids = [aws_security_group.maingroup.id]
    #Attach iam_instance_profile
    iam_instance_profile = aws_iam_instance_profile.ec2-profile.name
    connection {
        type = "ssh"
        host = self.public_ip
        user = "ubuntu"
        private_key = var.private_key
        timeout = "4m"
    }
    tags = {
        "name" = "DeployVM"
    }
}

#required for ec2 to access ecr
resource "aws_iam_instance_profile" "ec2-profile" {
  name = "ec2-profile"
  role = "EC2-ECR-AUTH"
}

resource "aws_security_group" "maingroup" {
    egress = [
        {
            cidr_blocks = ["0.0.0.0/0"]
            description = ""
            from_port = 0
            ipv6_cidr_blocks = []
            prefix_list_ids = []
            protocol = "-1"
            security_groups = []
            self = false
            to_port = 0
        }
    ]

    ingress = [
        {
            cidr_blocks = ["0.0.0.0/0"]
            description = ""
            from_port = 22
            ipv6_cidr_blocks = []
            prefix_list_ids = []
            protocol = "tcp"
            security_groups = []
            self = false
            to_port = 22
        },
        {
            cidr_blocks = ["0.0.0.0/0"]
            description = ""
            from_port = 80
            ipv6_cidr_blocks = []
            prefix_list_ids = []
            protocol = "tcp"
            security_groups = []
            self = false
            to_port = 80
        }
    ]
 
}

resource "aws_key_pair" "deployer"{
    key_name = var.key_name
    public_key = var.public_key

}

#terraform output to get the public_ip of the created ec2
output "instance_public_ip" {
    value = aws_instance.servernode.public_ip
    sensitive = true
  
}
